--- a/pom.xml
+++ b/pom.xml
@@ -15,6 +15,7 @@
         <groupId>org.springframework.boot</groupId>
         <artifactId>spring-boot-starter-parent</artifactId>
         <version>1.5.1.RELEASE</version>
+        <relativePath></relativePath>
     </parent>
 
     <build>
